<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_grey"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="43dp"
        android:minWidth="214dp"
        android:minHeight="77dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dermage_logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:text="@string/acesse_a_sua_conta"
        android:textColor="@color/laranja_dermage"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/caixa_nome"
        android:layout_width="350sp"
        android:layout_height="50sp"
        android:layout_marginTop="48dp"
        android:background="@drawable/bg_rounded"
        android:hint="@string/email_ou_numero_de_celular"
        android:textColor="@color/black"
        android:textColorHint="@color/dark_grey"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/caixa_senha"
        android:layout_width="350sp"
        android:layout_height="50sp"
        android:layout_marginTop="48dp"
        android:background="@drawable/bg_rounded"
        android:hint="@string/senha"
        android:textColor="@color/black"
        android:textColorHint="@color/dark_grey"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/caixa_nome" />

    <Button
        android:id="@+id/esqueceuSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"

        android:background="@color/material_on_background_disabled"
        android:backgroundTint="@color/dark_grey"
        android:text="@string/esqueceu_a_senha"
        android:textAppearance="@style/MaterialAlertDialog.Material3.Title.Icon"
        android:textColor="@color/light_grey"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/caixa_senha" />

    <Button
        android:id="@+id/entrar"
        android:layout_width="356dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:background="@drawable/bg_rounded"
        android:backgroundTint="@color/laranja_dermage"
        android:text="@string/enviar"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/caixa_senha" />


    <ImageView
        android:layout_width="150sp"
        android:layout_height="4dp"
        android:layout_marginBottom="12dp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="150sp"
        android:layout_height="4dp"
        android:layout_marginBottom="12dp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/ou"
        android:textColor="@color/light_grey"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/entrar" />

    <ImageButton
        android:id="@+id/btnGoogle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="0sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/google_1" />

    <ImageButton
        android:id="@+id/btnFacebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="0sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGoogle"
        app:srcCompat="@drawable/face_1" />

    <TextView
        android:id="@+id/textNao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="36dp"
        android:text="@string/sem_conta"
        android:textColor="@color/light_grey"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnFacebook" />

    <Button
        android:id="@+id/cadastrar"
        android:layout_width="wrap_content"
        android:layout_height="29dp"
        android:padding="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/dark_grey"
        android:text="@string/cadastre_se"
        android:textColor="@color/laranja_dermage"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/textNao"
        app:layout_constraintTop_toBottomOf="@+id/btnFacebook" />

</androidx.constraintlayout.widget.ConstraintLayout>